--- a/CPP_Demo/CPP_Demo.vcxproj.filters
+++ b/CPP_Demo/CPP_Demo.vcxproj.filters
@@ -36,10 +36,34 @@
     <ClCompile Include="numpyCPP_demo.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="opencv_51_01_入门案例.cpp">
+    <ClCompile Include="opencv_51_02_矩阵掩膜操作.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="opencv_51_02_加载修改保存.cpp">
+    <ClCompile Include="opencv_51_01_加载修改保存.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_00_入门案例.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_02_Filter使用.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_03_Mat对象.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_04_图像操作.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_04_图像操作像素.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_05_图像混合.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_06_调整图像亮度与对比度.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opencv_51_07_绘制形状和文字.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
